--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jdbc",
-  "version": "0.1.6",
+  "name": "jdbc-icaro",
+  "version": "0.1.6-2",
   "description": "Node Module JDBC wrapper",
   "main": "index.js",
   "dependencies": {
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/CraZySacX/node-jdbc.git"
+    "url": "git://github.com/BrOrlandi/node-jdbc.git"
   },
   "directories": {
     "doc": ".",
@@ -34,7 +34,7 @@
   "engines": {
     "node": ">=0.10"
   },
-  "author": "Jason Ozias <jason.g.ozias@gmail.com>",
+  "author": "Bruno Orlandi <brorlandi@gmail.com>",
   "license": "MIT",
   "readmeFilename": "README.md"
 }
